tests/baselines/reference/privacyCheckAnonymousFunctionParameter2.errors.txt
privacyCheckAnonymousFunctionParameter2.ts(4,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
privacyCheckAnonymousFunctionParameter2.ts(10,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== privacyCheckAnonymousFunctionParameter2.ts (2 errors) ====
    export var x = 1;  // Makes this an external module 
    interface Iterator<T> { x: T }
    
    module Q {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export function foo<T>(x: (a: Iterator<T>) => number) {
            return x;
        }
    }
    
    module Q {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        function bar() {
            foo(null);
        }
    }